working on the images

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                 <article id="kiambaa">
                     <h2 class="headings">Kiambaa Member of Parliament 2022</h2>
                 <figure>
-                <img src="kiambaa.jpg" alt="Kiambaa MP">
+                <img src="kiambaa-member-of-parliament-2022.jpg" alt="Kiambaa MP">
                 <figcaption>John Njuguna Wanjiku - MP Kiambaa (Image Source:Facebook)</figcaption>
                 </figure>
 
@@ -1629,7 +1629,7 @@
                 <article id="cianda">
                     <h2 class="headings">Cianda Member of County Assembly (MCA) 2022 [Kiambaa]</h2>
                 <figure>
-                <img src="cianda-ward-mca.jpg" alt="Cainda Ward MCA">
+                <img src="cianda-ward.jpg" alt="Cainda Ward MCA">
                 <figcaption>Joseph Koigi - MCA Cianda (Image Source:Facebook)</figcaption>
                 </figure>
 
@@ -1692,7 +1692,7 @@
                 <article id="karuri">
                     <h2 class="headings">Karuri Member of County Assembly (MCA) 2022 [Kiambaa]</h2>
                 <figure>
-                <img src="karuri-ward-mca.jpg" alt="Karuri Ward MCA">
+                <img src="karuri-mca.jpg" alt="Karuri Ward MCA">
                 <figcaption>Peter Wainaina - MCA Karuri (Image Source:Facebook)</figcaption>
                 </figure>
 
@@ -1843,7 +1843,7 @@
                 <article id="muchatha">
                     <h2 class="headings">Muchatha Member of County Assembly (MCA) 2022 [Kiambaa]</h2>
                 <figure>
-                <img src="muchatha-ward-mca.jpg" alt="Muchatha MCA">
+                <img src="muchatha-mca.jpg" alt="Muchatha MCA">
                 <figcaption>Kenneth Karanja - MCA Muchatha (Image Source:Facebook)</figcaption>
                 </figure>
 
