closing unclosed elements

--- a/index.html
+++ b/index.html
@@ -457,6 +457,7 @@
                     </tr>
                 </table>
             </div>
+            </article>
           
     <div id="time-remaining">
         <p class="para">There you go ladies and gentlemen, that is how Kiambu County faired in voting in its' leaders.</p>
